infra/k8s/prod/prod-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ing
  labels:
    name: prod-ing
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - www.neutrino.live
      - api.neutrino.live
      secretName: neutrino-prod-tls
  rules:
  - host: www.neutrino.live
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-app-clusterip
            port: 
              number: 3000
  - host: api.neutrino.live
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway-clusterip
            port: 
              number: 80
